tests/quick-start-delete-dependency/quick-start-delete-dependency.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

Delete @flow file with a @flow dependent file, expect error.
Error ----------------------------------------------------------------- b.js:2:9

Cannot resolve module `./a`.

Error: b.js:2
  2: require('./a');
             ^^^^^ Cannot resolve module `./a`.


Found 1 error

Revert file, expect no errors.
No errors!

Done!
